@@ -3,6 +3,7 @@ class TestCase::Sys::Process {
   use Sys::Process::Constant as Process;
   use Time;
   use Sys::Process::Tms;
+  use Sys::Time::Timespec;
   
   static method alarm : int () {
     
@@ -321,6 +322,27 @@ class TestCase::Sys::Process {
     my $start = Time->time;
     
     my $status = Sys::Process->usleep(1_100_000);
+    
+    unless ($status  == 0) {
+      return 0;
+    }
+    
+    unless (Time->time - $start >= 1) {
+      return 0;
+    }
+    
+    return 1;
+  }
+
+  static method nanosleep : int () {
+    
+    my $start = Time->time;
+    
+    my $ts = Sys::Time::Timespec->new;
+    $ts->set_tv_sec(1);
+    $ts->set_tv_nsec(100_000_000);
+    
+    my $status = Sys::Process->nanosleep($ts, undef);
     
     unless ($status  == 0) {
       return 0;
