@@ -5,6 +5,8 @@
     * Added the following methods to the Sys::Process class.
     
       static method usleep : int ($usec : int);
+      static method nanosleep : int ($rqtp : Sys::Time::Timespec, $rmtp : Sys::Time::Timespec);
+    
     * Added the Sys::Time::Timespec class.
     
 0.09 2022-10-07
